# PawaharaHarness

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml
.github/workflows/: binaries.yml
scripts/: bench_monitor_snapshot.py  bench_search_events.py  build_binary.py  profile_monitor_snapshot_costs.py
skills/claude/pawahara-harness/: SKILL.md
skills/codex/pawahara-harness/: SKILL.md
src/pawahara_harness/: __init__.py  __main__.py  agents.py  cli.py  context.py  cube.py  orchestrator.py  tui.py  web.py
tests/: test_agents.py  test_context.py  test_cube.py  test_orchestrator.py  test_tui.py  test_web.py
