[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pawahara-harness"
version = "0.1.0"
description = "Context-managed Codex agent search harness with optional CubeSandbox."
requires-python = ">=3.11"
dependencies = [
  "e2b-code-interpreter>=2.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
codex-sdk = [
  "pydantic>=2.12",
]

[project.scripts]
pawahara-harness = "pawahara_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pawahara_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
